# global-industry-classification-standard

./: .gitignore  README.md  gics.json  gics.xlsx  pyproject.toml  requirements.txt
csv/: industries.csv  industry_groups.csv  sectors.csv  sub_industries.csv
script/: __main__.py
